[package]
name = "riscv-target"
version = "0.2.0"
repository = "https://github.com/ilya-epifanov/riscv-target"
authors = ["Ilya Epifanov <elijah.epifanov@gmail.com>"]
categories = ["embedded"]
description = "RISC-V target string manipulation utilities"
keywords = ["riscv"]
license = "ISC"

[dev-dependencies]
test-case = "3.0.0"
